--- a/about.html
+++ b/about.html
@@ -3,6 +3,6 @@ layout: default
 ---
 
 <div class="well">
-    <h1>About me</h1>
-    <p>Hello, I am me.</p>
+    <h1>关于码叔宣</h1>
+    <p>程序员兼个人投资家</p>
 </div>
