--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@ layout: default
 {% for post in paginator.posts %}
 <div class="article">
     <div>
-        <h1><a href="{{ site.baseurl}}{{ post.url }}">{{ post.date | date: "%b %-d, %Y" }} - {{ post.title }}</a></h1>
-        {% if site.comments == true and post.comments == true and site.disqus != '' %}
-          <p class="author"><a href="{{ site.baseurl }}{{ post.url }}/#disqus_thread">Comments</a></p>
-        {% endif %}
+        <h1><a href="{{ site.baseurl}}{{ page.url }}">{{ page.title }}</a></h1>
+        <p class="author">
+          Post on {{ page.date | date: "%b %-d, %Y" }}
+          {% if site.comments == true and page.comments == true and site.disqus != '' %}
+              <a href="#disqus_thread"> / 评论</a>
+          {% endif %}
+        </p>
         <div class="content">
             {{ post.content }}
         </div>
