--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@ layout: default
 {% for post in paginator.posts %}
 <div class="article">
     <div>
-        <h1><a href="{{ site.baseurl}}{{ page.url }}">{{ page.title }}</a></h1>
+        <h1><a href="{{ site.baseurl}}{{ post.url }}">{{ post.title }}</a></h1>
         <p class="author">
           Post on {{ page.date | date: "%b %-d, %Y" }}
-          {% if site.comments == true and page.comments == true and site.disqus != '' %}
-              <a href="#disqus_thread"> / 评论</a>
-          {% endif %}
+        {% if site.comments == true and post.comments == true and site.disqus != '' %}
+          <a href="{{ site.baseurl }}{{ post.url }}/#disqus_thread"> / 评论</a>
+        {% endif %}
         </p>
         <div class="content">
             {{ post.content }}
