--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
         <p class="author">
           Post on {{ page.date | date: "%b %-d, %Y" }}
         {% if site.comments == true and post.comments == true and site.disqus != '' %}
-          <a href="{{ site.baseurl }}{{ post.url }}/#disqus_thread"> / 评论</a>
+          <a href="{{ site.baseurl }}{{ post.url }}/#disqus_thread">评论</a>
         {% endif %}
         </p>
         <div class="content">
