--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
     <div>
         <h1><a href="{{ site.baseurl}}{{ post.url }}">{{ post.title }}</a></h1>
         <p class="author">
-          Post on {{ page.date | date: "%b %-d, %Y" }}
+          Post on {{ page.date | date_to_string }}
         {% if site.comments == true and post.comments == true and site.disqus != '' %}
           <a href="{{ site.baseurl }}{{ post.url }}/#disqus_thread">评论</a>
         {% endif %}
