update cloud book manual

--- a/manual/cloud-book.html
+++ b/manual/cloud-book.html
@@ -37,10 +37,11 @@
 
   <div class="post-content e-content" itemprop="articleBody">
     <h3 id="-icloud雲帳本">■ iCloud雲帳本</h3>
-<p>天天記帳的iCloud雲帳本主要有如下兩個功能。</p>
+<p>天天記帳的iCloud雲帳本主要有如下3個功能。</p>
 <ol>
-  <li><strong>相同Apple ID的手機/iPad間的帳本同步</strong></li>
-  <li><strong>家人或者朋友間的共同記帳</strong></li>
+  <li><strong>自動同步帳本資料到iCloud</strong></li>
+  <li><strong>同步相同Apple ID的手機/iPad間的帳本資料</strong></li>
+  <li><strong>和家人或朋友共同記帳</strong></li>
 </ol>
 
 <h3 id="-雲帳本設定方法">■ 雲帳本設定方法</h3>
