update cloud book manual

--- a/manual/cloud-book.html
+++ b/manual/cloud-book.html
@@ -37,10 +37,10 @@
 
   <div class="post-content e-content" itemprop="articleBody">
     <h3 id="-icloud雲帳本">■ iCloud雲帳本</h3>
-<p>天天記帳的iCloud雲帳本主要有如下3個功能。</p>
+<p>天天記帳的iCloud雲帳本主要有如下功能。</p>
 <ol>
-  <li><strong>自動同步帳本資料到iCloud</strong></li>
-  <li><strong>同步相同Apple ID的手機/iPad間的帳本資料</strong></li>
+  <li><strong>自動備份帳本資料到iCloud雲端</strong></li>
+  <li><strong>在相同Apple ID的手機/iPad/M1 Mac間同步帳本</strong></li>
   <li><strong>和家人或朋友共同記帳</strong></li>
 </ol>
 
