update cloud book manual

--- a/manual/cloud-book.html
+++ b/manual/cloud-book.html
@@ -127,7 +127,7 @@
  <img src="https://kakeibo-helper.oss-cn-hongkong.aliyuncs.com/cloudbook/tw-logout-appleid.jpeg" alt="list" width="320" /></li>
     </ol>
 
-    <p>4.4 <strong>如果還不行，重新啟動1次手機</strong></p>
+    <p>4.4 <strong>重新登入，如果還不行，重新啟動1次手機</strong></p>
 
     <p>4.5 <strong>如果還不行，麻煩您直接聯繫swalloworks@gmail.com</strong></p>
   </li>
