update cloud book manual

--- a/manual/cloud-book.html
+++ b/manual/cloud-book.html
@@ -89,6 +89,14 @@
 所以不需要另行綁定其他帳號。</p>
   </li>
   <li>
+    <h4 id="q-為什麼固定收支和轉帳沒有同步到">Q: <strong>為什麼固定收支和轉帳沒有同步到？</strong></h4>
+    <p>A: 天天記帳的固定收支的自動生成是在本機內完成的，如果同步，每台設備上都會自動生成1次，從而造成重複。所以現在沒有列入同步的對象。</p>
+  </li>
+  <li>
+    <h4 id="q-為什麼信用卡的自動繳款選項沒有同步到">Q: <strong>為什麼信用卡的自動繳款選項沒有同步到？</strong></h4>
+    <p>A: 自動繳款選項也沒有列入同步對象，理由同上。</p>
+  </li>  
+  <li>
     <h4 id="q-記錄什麼時候會被同步到如果沒有同步到該怎麼辦">Q: <strong>記錄什麼時候會被同步到，如果沒有同步到該怎麼辦？</strong></h4>
     <p>A: 同步基本上是即時(realtime)的, 但如果App長期沒有開啟或者處於後台的情況下，會出現同步延遲。這樣的時候，可以手動同步。<br />
  2.1 <strong>手動同步方法1</strong>  <br />
