update cloud book manual

--- a/manual/cloud-book.html
+++ b/manual/cloud-book.html
@@ -68,7 +68,7 @@
 <img src="https://kakeibo-helper.oss-cn-hongkong.aliyuncs.com/cloudbook/tw-cloudbook4.PNG" alt="list" width="330" /></p>
   </li>
   <li>
-    <p><strong>輸入對方 電子郵件或者電話號碼</strong><br />
+    <p><strong>輸入對方 Apple ID所使用的電子郵件</strong><br />
 <img src="https://kakeibo-helper.oss-cn-hongkong.aliyuncs.com/cloudbook/tw-cloudbook5.PNG" alt="list" width="330" /></p>
   </li>
   <li>
