update cloudbook manual

--- a/manual/cloud-book.html
+++ b/manual/cloud-book.html
@@ -76,7 +76,13 @@
   </li>
   <li>
     <p><strong>對方打開連結就可以共同記帳了</strong><br />
-<em><span style="color: red; font-weight: bold; ">注意）因為共享連結在Line或者Wechat裡不能直接打開，需要拷貝連結到Safari後打開。</span></em></p>
+<em><span style="color: red; font-weight: bold; ">注意）因為共享連結在Line或者Wechat裡不能直接打開，需要用Safari打開。</span></em><br />
+以下是LINE時的操作方法<br />
+5.1. 點一下LINE送來的連結<br />
+5.2. 再點一下如下介面的右下角按鈕<br />
+ <img src="https://kakeibo-helper.oss-cn-hongkong.aliyuncs.com/cloudbook/tw-cloudbook-line1.png" alt="list" width="330" /><br />
+5.3. 再選擇「使用預設瀏覽器開啟」
+ <img src="https://kakeibo-helper.oss-cn-hongkong.aliyuncs.com/cloudbook/tw-cloudbook-line2.png" alt="list" width="330" /></p>
   </li>
 </ol>
 
