update cloudbook manual

--- a/manual/cloud-book.html
+++ b/manual/cloud-book.html
@@ -81,7 +81,7 @@
 5.1. 點一下LINE送來的連結<br />
 5.2. 再點一下如下介面的右下角按鈕<br />
  <img src="https://kakeibo-helper.oss-cn-hongkong.aliyuncs.com/cloudbook/tw-cloudbook-line1.png" alt="list" width="330" /><br />
-5.3. 再選擇「使用預設瀏覽器開啟」
+5.3. 再選擇「使用預設瀏覽器開啟」<br />
  <img src="https://kakeibo-helper.oss-cn-hongkong.aliyuncs.com/cloudbook/tw-cloudbook-line2.png" alt="list" width="330" /></p>
   </li>
 </ol>
